# msmath

./: README.md  algebra.html  pyproject.toml  setup.py
src/msmath/: bch.py  bitstring.py  ffield.py  ffpoly.py  fring.py  graph.py  matrix.py  numfuns.py  optable.py  poly.py  quaternion.py  rational.py  share.py
tests/: test_bitstring.py  test_ffield.py  test_matrix.py  test_poly.py  test_rational.py
